--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,4 +14,23 @@
 
 /* Top Nav Bar (navbar.js) */
 
+.top-navigator a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.top-navigator a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.top-navigator a.active {
+  background-color: #04aa6d;
+  color: white;
+}
+
 /* Top Nav Bar - End CSS Style */
