--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -1,6 +1,5 @@
 html,
 body {
-  height: 100%;
   margin: 0;
   padding: 0;
 }
@@ -10,7 +9,8 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   overflow: hidden;
-  min-height: 100vh;
+  width: 100%;
+  margin: 1rem;
 }
 
 .col {
@@ -22,22 +22,22 @@ body {
   flex-direction: flex;
 }
 
-.padding {
-  padding-left: 0.1rem;
-  padding-right: 0.1rem;
-  padding-bottom: 0.1rem;
-  padding-top: 0.1rem;
-}
-
 .align-right {
   text-align: right;
   float: right;
 }
 
 /* Center Element In Parent */
-.center {
+.perfect-center {
   margin: auto;
   padding: 2rem;
+}
+
+.vertical-center {
+  margin: 0;
+  left: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 .form-width {
@@ -156,7 +156,6 @@ button {
   display: none;
   position: absolute;
   background-color: #333; /* Style */
-  min-width: 160px; /* Style */
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2); /* Style */
   z-index: 1;
 }
@@ -183,3 +182,28 @@ button {
 }
 
 /* === Navigation Menu - Including Dropdown - Layout === */
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+}
+
+.customer-table {
+  width: 75%;
+}
+
+/* Tables - Customer Table - Layout  - Start*/
+
+td,
+th {
+  text-align: left;
+  padding: 0.5rem;
+}
+
+.table-head {
+  border-bottom: none;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+/* Tables - Customer Table - Layout - End*/
