started working on component list. Issue with deleting from Db. 404 Error

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -72,6 +72,10 @@ button {
 
 /* Tables - Style - Start*/
 
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+
 /* Tables - Customer Table - Style  - Start*/
 
 td,
